fix: light dark mode color for svgs (#15)

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,8 +3,7 @@ Overide default styles for the website
 */
 @font-face {
   font-family: "minecraftia";
-  src:
-    url("../fonts/minecraftia/minecraftia.woff") format("woff"),
+  src: url("../fonts/minecraftia/minecraftia.woff") format("woff"),
     /* Pretty Modern Browsers */ url("../fonts/minecraftia/minecraftia.ttf")
       format("truetype"); /* Safari, Android, iOS */
 }
@@ -120,12 +119,6 @@ h1 {
 
 .page-description {
   margin-bottom: 10px;
-}
-
-.back-icon {
-  width: 50px;
-  height: 50px;
-  flex-shrink: 0; /* Prevent the icon from shrinking */
 }
 
 /* Defaults */
